# aruco_ros

aruco/: CHANGELOG.rst  CMakeLists.txt
aruco/include/aruco/: fractaldetector.h  markerdetector.h
aruco/src/aruco/: fractaldetector.cpp
aruco_ros/: CMakeLists.txt
aruco_ros/include/aruco_ros/: aruco_ros_utils.h
aruco_ros/launch/: fractal.launch
aruco_ros/src/: aruco_ros_utils.cpp  fractal.cpp  simple_single.cpp
